package com.hqbhoho.bigdata.design.pattern.observer;

public interface StockHolder {
    void process(StockEvent stockEvent);
}
